@@ -1,3 +1,4 @@
-<html><body>You can add and remove buttons in the tool bar in the
+<html><body>You can customize the buttons shown on the tool bar (or disable it
+altogether) in the
 <b>Tool Bar</b> pane of the <b>Utilities</b>&gt;<b>Global Options</b>
 dialog box.</body></html>
