@@ -1,6 +1,6 @@
 <html><body>Pressing <b>C+b</b> searches the current
 buffer and the current mode's keyword list for words beginning with
-the one before the caret..<p>
+the one before the caret.<p>
 
 This serves as a very basic code completion feature, for example:
 
