@@ -1,4 +1,5 @@
 <html><body>If you use jEdit to edit Java source, you should install the
-<b>JBrowse</b>, <b>JImporter</b> and <b>JTools</b> plugins. Plugins can
+<b>JBrowse</b>, <b>JExplorer</b>, <b>JImporter</b> and <b>JTools</b> plugins.
+Plugins can
 be downloaded and installed from within jEdit using the plugin manager
 (<b>Plugins</b>&gt;<b>Plugin Manager</b>).</body></html>
