@@ -1,5 +1,4 @@
 <html><body>
-The file system browser and many plugin windows can be set to dock into
-the view in the <b>Docking</b> pane of the <b>Utilities</b>&gt;<b>Global
-Options</b> dialog box.
+The file system browser and many plugin windows can be docked into
+the view. Just click on the menu button in the top left corner of a dockable window and select the docking location from the popup menu shown.
 </body></html>
