@@ -1,5 +1,2 @@
 <html><body>You can browse directories and rename or delete files in the
-<b>Utilities</b>&gt;<b>File System Browser</b> window.
-If you want the file system browser window to dock into the current
-view, specify so in the <b>Docking</b> pane of the
-<b>Utilities</b>&gt;<b>Global Options</b> dialog box.</body></html>
+<b>Utilities</b>&gt;<b>File System Browser</b> window.</body></html>
