@@ -1,6 +1,6 @@
 <html><body>
 If you use dockable windows, you might have noticed that the tool bar placement
 policy has changed in jEdit 4.1. If you would prefer to revert to the old
-jEdit 4.0 behavior, you can do so in the <b>Docking</b> pane of the
+jEdit 4.0 behavior, you can do so in the <b>View</b> pane of the
 <b>Utilities</b>&gt;<b>Global Options</b> dialog box.
 </body></html>
