@@ -1,6 +1,9 @@
 <html><body>The <b>SpellCheck</b> plugin lets you check spelling within
 jEdit if the <code>aspell</code> utility is installed. <code>aspell</code> can
-be found at <font color="blue"><u>http://aspell.sourceforge.net</u></font>.
+be found at <font color="blue"><u>http://aspell.sourceforge.net</u></font>.<p>
+
+<b>Jazzy</b> is alternative spelling checker plugin that does not rely on an external utility.<p>
+
 Plugins can
 be downloaded and installed from within jEdit using the plugin manager
 (<b>Plugins</b>&gt;<b>Plugin Manager</b>).</body></html>
