@@ -1,2 +1,2 @@
-<html><body>Pressing <b>C+e C+e</b> moves keyboard focus to the text area.
+<html><body>Pressing <b>C+e C+j</b> moves keyboard focus to the text area.
 </body></html>
