@@ -1137,6 +1137,11 @@ public class View extends JFrame implements EBComponent
 			handleBufferUpdate((BufferUpdate)msg);
 		else if(msg instanceof EditPaneUpdate)
 			handleEditPaneUpdate((EditPaneUpdate)msg);
+		else if(msg instanceof PluginUpdate)
+		{
+			if(actionBar != null)
+				actionBar.actionListChanged();
+		}
 	} //}}}
 
 	//{{{ getMinimumSize() method
